@@ -505,6 +505,7 @@ oper {
 #     D  Can use DIE
 #     R  Can use RESTART
 #     A  Can use umode +A (server administrator)
+#     P  Primary oper block (for social organization)
 # 
 # The class token specifies the connection class the operator will be
 # placed in.  If not specified, the default class is used; see the Class
