@@ -42,6 +42,8 @@ Changes for 1.8.4
 - Added automatic rejection of certain proxy types
 - Added local storage system for klines, making UNKLINE work as expected
 - Added noident/nodns/server flags to port blocks
+- Added "P" (primary o-line) flag to oper blocks
+- Changed stats o output to be in human-readable format
 
 - Reworked memory accounting:
     stats z  shows short summary
